--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoot the Messenger</title>
-    <link rel="text/stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
     <h1>Welcome to <i>Shoot the Messenger!</i></h1>
